[tool.poetry]
name = "gaitmap_mad"
version = "2.1.1a0"
description = "Specific algorithm implementaions by the mad_lab"
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/mad-lab-fau/gaitmap"
repository = "https://github.com/mad-lab-fau/gaitmap"
authors = [
    "Arne Küderle <arne.kuederle@fau.de>",
    "Martin Ullrich <martin.ullrich@fau.de>",
    "Nils Roth <nils.roth@fau.de>",
    "Moradi, Hamid <hamid.moradi@fau.de>"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"